# license-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
license_analyzer/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  scanner.py
license_analyzer/analysis/: __init__.py  compatibility.py  confidence.py  conflicts.py  filtering.py  modified.py  overrides.py  policy.py  problematic.py
license_analyzer/cache/: __init__.py
license_analyzer/config/: __init__.py  defaults.py  loader.py
license_analyzer/models/: __init__.py  config.py  dependency.py  policy.py  scan.py
license_analyzer/output/: __init__.py  matrix.py  matrix_json.py  matrix_markdown.py  scan_json.py  scan_markdown.py  terminal.py  tree.py  tree_json.py  tree_markdown.py
license_analyzer/resolvers/: __init__.py  base.py  dependency.py  github.py  pypi.py  readme.py
tests/: __init__.py  conftest.py  test_cli.py  test_constants.py  test_exceptions.py  test_models.py  test_package.py  test_scanner.py
tests/analysis/: __init__.py  test_compatibility.py  test_confidence.py  test_conflicts.py  test_filtering.py  test_modified.py  test_overrides.py  test_policy.py  test_problematic.py
tests/config/: test_loader.py
tests/models/: test_config.py  test_dependency.py  test_policy.py  test_scan.py
tests/output/: test_matrix.py  test_matrix_json.py  test_matrix_markdown.py  test_scan_json.py  test_scan_markdown.py  test_terminal.py  test_tree.py  test_tree_json.py  test_tree_markdown.py
tests/resolvers/: __init__.py  test_dependency.py  (+3 more)
