[project]
name = "license-analyzer"
version = "0.1.0"
description = "Scan Python dependencies for license information"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "license-expression>=30.4.4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[project.scripts]
license-analyzer = "license_analyzer.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "types-pyyaml>=6.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["UP045"]  # Keep Optional[X] for Python 3.9 runtime compatibility

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",   # Line too long - tests often have long descriptive names
    "SIM117", # Nested with statements - common pattern in test mocking
]
